--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup=(\"I\",)\n"
    ]
   },
   {
@@ -33,11 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I',)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup=(\"I\",)\n",
+    "print(tup)"
    ]
   },
   {
@@ -55,11 +66,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup=(\"I\",)\n",
+    "items = ['r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
+    "\n",
+    "l= list(tup)\n",
+    "\n",
+    "tup1 = l + items\n",
+    "\n",
+    "T=tuple(tup1)\n",
+    "print(T)\n",
+    "\n",
+    "\n",
     "\n",
     "# Your explanation here\n"
    ]
