--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "tup = (\"I\",)\n"
    ]
   },
   {
@@ -33,12 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
-    "v"
+    "print(type(tup))"
    ]
   },
   {
@@ -62,7 +77,9 @@
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "\n",
+    "# Your explanation here\n",
+    "Las tuplas son inmutables"
    ]
   },
   {
@@ -80,13 +97,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
+    "tup = (\"I\",)\n",
     "\n",
-    "# Your explanation here\n"
+    "lista1 = list(tup)\n",
+    "\n",
+    "\n",
+    "lista1.extend([\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"])\n",
+    "\n",
+    "\n",
+    "tup = tuple(lista1)\n",
+    "\n",
+    "print(tup)\n",
+    "# Your explanation here\n",
+    "\n",
+    "Primero converti la tupla en lista y le agregue los elementos, despues lo volvi a convertir en tupla"
    ]
   },
   {
