primeros cambios de prueba

--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "tup = (\"I\",)"
    ]
   },
   {
@@ -33,11 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "print (type(tup))\n"
    ]
   },
   {
@@ -55,13 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n",
-    "\n",
-    "# Your explanation here\n"
+    "#Las tuplas son inmutables\n"
    ]
   },
   {
@@ -79,13 +85,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n",
+    "tup = (\"I\",)\n",
     "\n",
-    "# Your explanation here\n"
+    "tupla1 = list(tup)\n",
+    "\n",
+    "tupla1.extend([\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"])\n",
+    "\n",
+    "tup = tuple(tupla1)\n",
+    "\n",
+    "print (tup)\n",
+    "\n",
+    "# La tupla como es inmutable se tiene que convertir en lista, se agregan los elementos y despues\n",
+    "# se vuelve a convertir en tupla"
    ]
   },
   {
@@ -107,7 +130,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "\n"
    ]
   },
   {
@@ -219,7 +242,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
