--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,11 +38,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[59, 99, 14, 66, 7, 74, 72, 87, 48, 58, 41, 98, 77, 49, 63, 56, 34, 38, 95, 33, 29, 44, 15, 62, 30, 55, 89, 0, 11, 85, 71, 68, 13, 42, 93, 54, 18, 73, 96, 25, 24, 6, 97, 50, 53, 4, 90, 61, 52, 79, 22, 92, 43, 82, 78, 19, 40, 45, 64, 26, 80, 39, 2, 46, 21, 81, 76, 5, 17, 91, 60, 32, 31, 47, 84, 88, 75, 83, 35, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_1 = random.sample(range(0,100), 80 )\n",
+    "print (sample_list_1)"
    ]
   },
   {
@@ -54,11 +65,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set1 = (set(sample_list_1))\n",
+    "\n",
+    "print(len(set1))\n",
+    "\n",
+    "# La longitud de set1 no varía porque sample_list_1 contenía elementos únicos"
    ]
   },
   {
@@ -77,11 +102,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[60, 42, 17, 18, 23, 58, 23, 32, 21, 22, 10, 19, 93, 44, 70, 100, 41, 93, 21, 43, 100, 97, 15, 93, 88, 43, 73, 21, 12, 68, 99, 58, 75, 71, 98, 89, 51, 100, 71, 27, 89, 42, 9, 55, 88, 28, 82, 72, 59, 44, 18, 6, 61, 72, 47, 66, 32, 84, 8, 0, 78, 10, 64, 28, 23, 30, 2, 4, 49, 56, 97, 46, 4, 4, 22, 55, 6, 90, 33, 95]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "sample_list_2 = []\n",
+    "\n",
+    "for e in range(80):\n",
+    "    sample_list_2.append(random.randint(0,100))\n",
+    "    \n",
+    "print (sample_list_2)"
    ]
   },
   {
@@ -93,11 +133,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "54\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set2 = (set(sample_list_2))\n",
+    "\n",
+    "print(len(set2))\n",
+    "\n",
+    "# La longitud de set2 no tiene porque mantenerse, ya que sample_list_2 puede tener elementos repetidos"
    ]
   },
   {
@@ -109,11 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{5, 7, 11, 13, 14, 24, 25, 26, 29, 31, 34, 35, 38, 39, 40, 45, 48, 50, 52, 53, 54, 62, 63, 74, 76, 77, 79, 80, 81, 83, 85, 87, 91, 92, 96}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set3 = set1.difference(set2)\n",
+    "\n",
+    "print(set3)\n"
    ]
   },
   {
@@ -125,11 +190,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{100, 70, 8, 10, 12, 51, 23, 27, 28}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set4 = set2.difference(set1)\n",
+    "\n",
+    "print(set4)"
    ]
   },
   {
@@ -141,11 +217,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 6, 9, 15, 17, 18, 19, 21, 22, 30, 32, 33, 41, 42, 43, 44, 46, 47, 49, 55, 56, 58, 59, 60, 61, 64, 66, 68, 71, 72, 73, 75, 78, 82, 84, 88, 89, 90, 93, 95, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set5 = set1.intersection(set2)\n",
+    "\n",
+    "print(set5)"
    ]
   },
   {
@@ -165,11 +253,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if (len(set1) + len(set2)) == (len(set3) + len(set4) + len(set5)*2):\n",
+    "    print (True)"
    ]
   },
   {
@@ -181,11 +280,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "set6= set()"
    ]
   },
   {
@@ -197,11 +298,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 5, 6, 7, 9, 11, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 29, 30, 31, 32, 33, 34, 35, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 64, 66, 68, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "set6.update(set3.union(set5))\n",
+    "print(set6)"
    ]
   },
   {
@@ -213,11 +324,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if set1 == set6:\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print(False)"
    ]
   },
   {
@@ -229,11 +353,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "if set2.issubset(set1):\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print (False)\n",
+    "    \n",
+    "if set3.issubset(set1):\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print (False)"
    ]
   },
   {
@@ -247,11 +390,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "union1 = set3.union(set4).union(set5)\n",
+    "union2 = set1.union(set2)\n",
+    "\n",
+    "if union1 == union2:\n",
+    "    print (True)\n",
+    "else:\n",
+    "    print (False)"
    ]
   },
   {
@@ -263,11 +422,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 5, 6, 7, 9, 11, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 29, 30, 31, 32, 33, 34, 35, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 64, 66, 68, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n",
+      "{2, 4, 5, 6, 7, 9, 11, 13, 14, 15, 17, 18, 19, 21, 22, 24, 25, 26, 29, 30, 31, 32, 33, 34, 35, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 58, 59, 60, 61, 62, 63, 64, 66, 68, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 87, 88, 89, 90, 91, 92, 93, 95, 96, 97, 98, 99}\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "print(set1)\n",
+    "\n",
+    "set1.pop()\n",
+    "\n",
+    "print(set1)"
    ]
   },
   {
@@ -283,12 +457,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{2, 4, 5, 6, 7, 13, 14, 15, 17, 18, 22, 24, 25, 26, 30, 32, 33, 34, 35, 38, 40, 42, 43, 44, 45, 46, 47, 48, 50, 52, 53, 54, 55, 56, 58, 60, 62, 63, 64, 66, 68, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 87, 88, 90, 92, 93, 95, 96, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
+    "\n",
+    "for e in list_to_remove:\n",
+    "    if e in set1:\n",
+    "        set1.remove(e)\n",
+    "\n",
+    "print (set1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -307,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
