--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -23,9 +23,7 @@
      "output_type": "stream",
      "text": [
       "('I',)\n",
-      "<class 'tuple'>\n",
-      "('I',)\n",
-      "<class 'tuple'>\n"
+      "('I',)\n"
      ]
     }
    ],
@@ -49,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -80,13 +78,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-d48ed4fa285f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0me\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlst\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0mtup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0me\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "lst = [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "\n",
+    "for e in lst:\n",
+    "    tup.append(e)\n",
+    "\n",
+    "print(tup)\n",
+    "\n",
+    "# Your explanation here\n",
+    "# Las tuplas no se pueden modificar. Si quisieras modificarla, tendrías que transformarla en lista \n",
+    "# y luego en tupla de nuevo.\n",
+    "\n",
+    "tup = list(tup)\n",
+    "\n",
+    "for e in lst:\n",
+    "    tup.append(e)\n",
+    "\n",
+    "tup=tuple(tup)\n",
+    "print(tup)\n"
    ]
   },
   {
@@ -104,12 +131,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n', 'h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
+    "tup = (\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\")\n",
+    "print(tup)\n",
     "# Your explanation here\n"
    ]
   },
@@ -128,11 +165,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('I', 'r', 'o', 'n') ('h', 'a', 'c', 'k')\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup1 = tup[0:4]\n",
+    "tup2 = tup[-4:]\n",
+    "\n",
+    "print (tup1, tup2)"
    ]
   },
   {
@@ -146,11 +196,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup3 es igual a tup\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "tup3 = tup1 + tup2\n",
+    "\n",
+    "if tup3 == tup:\n",
+    "    print (\"tup3 es igual a tup\")\n",
+    "else:\n",
+    "    print (\"tup3 NO es igual a tup\")\n"
    ]
   },
   {
@@ -162,11 +227,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tup3 tiene el mismo número de elemenos que tup1+tup2 sumados\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "count1 = len(tup1)\n",
+    "count2 = len(tup2)\n",
+    "\n",
+    "if (count1 + count2) == len(tup3):\n",
+    "    print (\"tup3 tiene el mismo número de elemenos que tup1+tup2 sumados\")\n",
+    "else:\n",
+    "    print (\"tup3 NO tiene el mismo número de elemenos que tup1+tup2 sumados\")\n",
+    "\n"
    ]
   },
   {
@@ -178,11 +260,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "h = tup3.index(\"h\")\n",
+    "print(h)\n"
    ]
   },
   {
@@ -202,11 +295,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for letter in letters:\n",
+    "    if letter in tup3:\n",
+    "        print (True)\n",
+    "    else:\n",
+    "        print (False)"
    ]
   },
   {
@@ -220,12 +333,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La letra a aparece 1 veces en tup3\n",
+      "La letra b aparece 0 veces en tup3\n",
+      "La letra c aparece 1 veces en tup3\n",
+      "La letra d aparece 0 veces en tup3\n",
+      "La letra e aparece 0 veces en tup3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "for letter in letters:\n",
+    "    if letter in tup3:\n",
+    "        print (\"La letra {} aparece {} veces en tup3\".format(letter, tup3.count(letter)))\n",
+    "    else:\n",
+    "        print (\"La letra {} aparece 0 veces en tup3\".format(letter))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
