--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup=(\"I\",)"
    ]
   },
   {
@@ -33,11 +34,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(type(tup))"
    ]
   },
   {
@@ -55,13 +65,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-fb14b9e9336b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0madd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"r\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"o\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"h\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"a\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"c\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"k\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0madded\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtup\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;31m# Your explanation here\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "add = [\"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "added=tup.append(add)\n",
+    "\n",
+    "# Your explanation here\n",
+    "\n",
+    "No es posible porque tup es un tuple y no se le pueden añadir elementos\n"
    ]
   },
   {
@@ -79,13 +106,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
-    "# Your explanation here\n"
+    "tup=list(tup)\n",
+    "tup= [\"I\", \"r\", \"o\", \"n\", \"h\", \"a\", \"c\", \"k\"]\n",
+    "print(tup)\n",
+    "\n",
+    "# Your explanation here\n",
+    "\n",
+    "Primero he pasado tup a una lista y la le he asignado los valores de forma manunal.\n"
    ]
   },
   {
@@ -103,11 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n'] ['h', 'a', 'c', 'k']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup1=tup[:4]\n",
+    "tup2=tup[4:]\n",
+    "\n",
+    "print(tup1, tup2)"
    ]
   },
   {
@@ -121,11 +174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['I', 'r', 'o', 'n', 'h', 'a', 'c', 'k']\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup3= tup1+tup2\n",
+    "print(tup3)\n",
+    "\n",
+    "print(tup3==tup)\n"
    ]
   },
   {
@@ -137,11 +203,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "count=len(tup1)\n",
+    "count2=len(tup2)\n",
+    "\n",
+    "number=count+count2\n",
+    "\n",
+    "print(number==len(tup3))"
    ]
   },
   {
@@ -153,11 +233,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "tup.index(\"h\")"
    ]
   },
   {
@@ -177,12 +269,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
-    "efefefefe"
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        print(True)\n",
+    "    else:\n",
+    "        print(False)"
    ]
   },
   {
@@ -196,11 +306,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a aparece 1 vez\n",
+      "b aparece 0 veces\n",
+      "c aparece 1 vez\n",
+      "d aparece 0 veces\n",
+      "e aparece 0 veces\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "\n",
+    "letters = [\"a\", \"b\", \"c\", \"d\", \"e\"]\n",
+    "\n",
+    "for i in letters:\n",
+    "    if i in tup3:\n",
+    "        counts=letters.count(i)\n",
+    "        print(i, \"aparece\", counts, \"vez\")\n",
+    "    else:\n",
+    "        counts=0\n",
+    "        print(i, \"aparece\", counts, \"veces\")"
    ]
   }
  ],
