no relevant changes

--- a/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-1.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Challenge 1: Tuples\n",
     "\n",
-    "#### Do you know you can create tuples with only one element?\n",
+    "####  you know you can create tuples with only one element?\n",
     "\n",
     "**In the cell below, define a variable `tup` with a single element `\"I\"`.**\n",
     "\n",
